# quickstart_api_openai

./: README.md  app.py  app_groq_ia.py  config.py  image_gen.py  pyproject.toml  text_to_audio.py
langchain_/: agente01.py  agente_python.py  app.py  app_memory_cache.py  chains.py  exemplo_duckduckgo_search_tools.py  exemplo_python_repl.py  exemplo_wikipedia.py  load_chain.py  openai_cache.db  router_chain.py  templates_ia.py  type_message.py
